samples/_failures_safe/1761137384_19a26a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a11b1049.c: In function ‘main’:
./samples/SAFE/__tmp_a11b1049.c:148:17: error: expected expression at end of input
  148 |                 if (temp2_idx >
      |                 ^~
./samples/SAFE/__tmp_a11b1049.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a11b1049.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a11b1049.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a11b1049.c:148:17: error: expected declaration or statement at end of input
